@@ -84,6 +84,8 @@ documents those changes that are of interest to users and administrators.
     Previously a readon of "BeginTime" could be reported long after the job's
     requested begin time had passed.
  -- Split group_info in slurm_ctl_conf_t into group_force and group_time.
+ -- Fix sview to avoid messages to stderr when modifying a block, partition,
+    or reservation.
 
 * Changes in Slurm 17.11.0pre1
 ==============================
